# rustylogs

./: .gitignore  Cargo.toml  README.md  config.toml
src/: config.rs  handler.rs  main.rs
src/commands/: adjust.rs  list.rs  listen.rs  mod.rs  stop.rs
src/events/: guild_create.rs  guild_delete.rs  interaction_create.rs  message.rs  message_delete.rs  mod.rs
