[package]
name = "rustylogs"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.11"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.189", features = ["derive"] }
toml = "0.8.4"
chatgpt_rs = "1.2.3"